making email ui better
