# Social/docs/swagger.json
@@ -363,10 +363,7 @@
                 ],
                 "responses": {
                     "204": {
-                        "description": "User activated",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "description": "No Content"
                     },
                     "404": {
                         "description": "Not Found",
@@ -830,6 +827,17 @@
                 }
             }
         },
+        "main.UserWithToken": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/store.User"
+                }
+            }
+        },
         "main.createPostHandlerResponse": {
             "type": "object",
             "properties": {
@@ -908,7 +916,7 @@
                     "example": "development"
                 },
                 "message": {
-                    "$ref": "#/definitions/store.User"
+                    "$ref": "#/definitions/main.UserWithToken"
                 },
                 "status": {
                     "type": "boolean",
